--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
-<html >
-<link rel="stylesheet" type="text/css" href="css/main.css">
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-<body>
- 
-<div ng-app="myApp" ng-controller="customersCtrl">
- 
-<table>
-  <tr ng-repeat="x in names">
-    <td>{{ x.Label }}</td>
-    <td>{{ x.Value }}</td>
-  </tr>
-</table>
- 
-</div>
- 
-<script>
-var app = angular.module('myApp', []);
-app.controller('customersCtrl', function($scope, $http) {
-   $http.get("http://ec2-54-244-135-126.us-west-2.compute.amazonaws.com/gettabledata.php")
-   .then(function (response) {$scope.names = response.data.records;});
-});
-</script>
- 
-</body>
+<html>
+
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+
+  <body>  
+
+    <div ng-app="myApp" ng-controller="MainController">
+     
+    <table>
+      <tr ng-repeat="x in records">
+        <td>{{ x.Label }}</td>
+        <td>{{ x.Value }}</td>
+      </tr>
+    </table>
+
+    </div>
+
+    <script src="js/myApp.js"></script>
+    <script src="js/controllers/MainController.js"></script>
+
+  </body>
 </html>
 
