--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <body>  
 
-    <div ng-app="myApp" ng-controller="MainController">
+    <div ng-app="NFLApp" ng-controller="NFLController">
      
     <table>
       <tr ng-repeat="x in records">
@@ -17,8 +17,8 @@
 
     </div>
 
-    <script src="js/myApp.js"></script>
-    <script src="js/controllers/MainController.js"></script>
+    <script src="js/NFLApp.js"></script>
+    <script src="js/controllers/NFLController.js"></script>
 
   </body>
 </html>
